# text-generation

./: .ebignore  .flaskenv  .gitignore  LICENSE  Procfile  README.md  application.py  definitions.py  package-lock.json  pyproject.toml  requirements.txt
model_creation/: 1_Scrape_arxiv.ipynb  20220125_ScrapeArxiv.ipynb  20220126_PackageModel.ipynb  2_finetune_gpt2_model.ipynb  3_convert_checkpoint_to_onnx.py  convert_checkpoint_to_onnx.py
models/: distilgpt2_onArxivMLData_quantized.onnx
models/onnx/: model.onnx  quantized_model.onnx
react-frontend/: package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/src/: App.css  App.js  index.css  index.js
react-frontend/src/App/: App.js  theme.js
react-frontend/src/App/Components/: Footer.js  Header.js  Instructions.js  Settings.js  TextPanel.js  index.js
react-frontend/src/Components/: App.css  App.js
react-frontend/src/Components/Layouts/: Footer.js  Header.js  index.js
tests/: test_inference.py
text_generation/: app.py  inference.py
text_generation/scratch/static/css/: style.css
text_generation/static/css/: style.css
text_generation/static/js/: script.js
text_generation/templates/: index.html
