[tool.poetry]
name = "text-generation"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "text_generation"}]

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "^1.22.1"
einops = "^0.4.0"
transformers = {extras = ["onnx"], version = "^4.16.2"}
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
