[tool.poetry]
name = "text-generation"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "text_generation"}]

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "^1.22.1"
einops = "^0.4.0"
transformers = {extras = ["onnx"], version = "^4.16.2"}
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.2.8"
pytest = "^6.2.5"
torch = "^1.10.2"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
pytorch-lightning = "^1.5.9"
wandb = "^0.12.10"
datasets = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
